<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarCategoriaActivity">

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="436dp"
        android:layout_marginTop="104dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/txtFldNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prioridad"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioGroup
            android:id="@+id/priorityGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/prioridadAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta" />

            <RadioButton
                android:id="@+id/prioridadMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media" />

            <RadioButton
                android:id="@+id/prioridadBaja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baja" />

            <RadioButton
                android:id="@+id/prioridadNula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nula" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/actualizar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>